end-to-end-ci-cd-projects/ansible/main.tf
resource "aws_instance" "AnsibleServer" {
  ami                    = data.aws_ami.amazonlinux2.id
  instance_type          = var.my_instance_type
  key_name               = var.my_key
  vpc_security_group_ids = [aws_security_group.vpc-web.id, aws_security_group.vpc-ssh.id]

  tags = {
    "Name" = "Ansible-Server"
  }
}
